Switched to newer bochs-release and adjusted the config

--- a/source/boot/i586/bochs.cfg
+++ b/source/boot/i586/bochs.cfg
@@ -15,10 +15,9 @@ ata2: enabled=0, ioaddr1=0x1e8, ioaddr2=0x3e0, irq=11
 ata3: enabled=0, ioaddr1=0x168, ioaddr2=0x360, irq=9
 
 com1: enabled=1, mode=file, dev="log.txt"
-keyboard_mapping: enabled=1, map=/usr/local/share/bochs/keymaps/x11-pc-de.map
+keyboard: type=mf, keymap=/usr/local/share/bochs/keymaps/x11-pc-de.map
 port_e9_hack: enabled=1
 
-vgaromimage: file="/usr/share/vgabios/vgabios.bin"
-vga: extension=vbe
-vga_update_interval: 40000
+vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest"
+vga: extension=vbe, update_freq=60
 
