--- a/source/kernel/src/arch/i586/ld.conf
+++ b/source/kernel/src/arch/i586/ld.conf
@@ -14,6 +14,7 @@ SECTIONS
 	
 	.text : AT(ADDR(.text) - 0xC0000000)
 	{
+		_btext = .;
 		*(.text)
 	}
 	
@@ -27,5 +28,6 @@ SECTIONS
 	{
 		*(COMMON*)
 		*(.bss*)
+		_ebss = .;
 	}
 }
