Video-mode-switching works. But still needs some improvement. Additionally, we can choose the desired cols/rows of the vterm in the drivers file. Thus, the kernel-option has been removed.

--- a/source/user/cpp/SConscript
+++ b/source/user/cpp/SConscript
@@ -4,7 +4,10 @@ Import('env')
 
 if env['ARCH'] == 'i586':
 	env.SConscript(env.Glob('*/SConscript'), 'env')
-else:
-	# TODO mmix-ld is unable to link some c++ apps
+elif env['ARCH'] == 'eco32':
 	for f in ['init', 'less', 'libcpptest', 'ls', 'ps', 'sort', 'ts', 'top']:
 		env.SConscript(f + '/SConscript', 'env')
+else:
+    # TODO mmix-ld is unable to link some c++ apps
+    for f in ['init', 'less', 'ls', 'ps', 'sort', 'ts', 'top']:
+        env.SConscript(f + '/SConscript', 'env')
