Call init-constructors at startup.

--- a/source/kernel/src/arch/i586/ld.conf
+++ b/source/kernel/src/arch/i586/ld.conf
@@ -17,6 +17,13 @@ SECTIONS
 		_btext = .;
 		*(.text)
 	}
+
+    .init_array : AT (ADDR (.init_array) - 0xC0000000)
+    {
+        PROVIDE (CTORS_BEGIN = .);
+        KEEP (*(.init_array .ctors))
+        PROVIDE (CTORS_END = .);
+    }
 	
 	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
 	{
