--- a/source/kernel/src/arch/mmix/ld.conf
+++ b/source/kernel/src/arch/mmix/ld.conf
@@ -9,6 +9,13 @@ SECTIONS
 	{
 		*(.text)
 	}
+
+    .init_array : AT (ADDR (.init_array) - 0xC0000000)
+    {
+        PROVIDE (CTORS_BEGIN = .);
+        KEEP (*(.init_array .ctors))
+        PROVIDE (CTORS_END = .);
+    }
 	
 	.data ALIGN (4096) : AT(ADDR(.data) - 0x8000000000000000)
 	{
