Put all text-symbols in one .text section.

--- a/source/kernel/src/arch/i586/ld.conf
+++ b/source/kernel/src/arch/i586/ld.conf
@@ -15,7 +15,7 @@ SECTIONS
 	.text : AT(ADDR(.text) - 0xC0000000)
 	{
 		_btext = .;
-		*(.text)
+		*(.text*)
 	}
 
     .init_array : AT (ADDR (.init_array) - 0xC0000000)
