--- a/source/kernel/src/arch/mmix/ld.conf
+++ b/source/kernel/src/arch/mmix/ld.conf
@@ -7,7 +7,7 @@ SECTIONS
 	
 	.text : AT(ADDR(.text) - 0x8000000000000000)
 	{
-		*(.text)
+		*(.text*)
 	}
 
     .init_array : AT (ADDR (.init_array) - 0xC0000000)
