--- a/source/bootloader/eco32/stage2/SConscript
+++ b/source/bootloader/eco32/stage2/SConscript
@@ -4,9 +4,10 @@ Import('env')
 
 myenv = env.Clone()
 ldscript = 'bootloader/eco32/stage2/ld.conf'
-myenv.Append(LINKFLAGS = '-ffreestanding -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,' + ldscript)
+myenv.Append(LINKFLAGS = ' -ffreestanding -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,' + ldscript)
+myenv.Append(CXXFLAGS = ' -std=c++0x -fno-exceptions -fno-rtti')
 elf = myenv.EscapeCProg(
-	'', 'stage2.elf', ['c0.S', myenv.Glob('*.c'), 'sctio-ctl.S'], force_static = True,
+	'', 'stage2.elf', ['c0.S', myenv.Glob('*.cc'), 'sctio-ctl.S'], force_static = True,
 	var_addr = False, LIBS = ['c']
 )
 myenv.Symlink('$BINDIR/stage2.elf', elf)
