--- a/source/bootloader/mmix/stage2/SConscript
+++ b/source/bootloader/mmix/stage2/SConscript
@@ -4,9 +4,10 @@ Import('env')
 
 myenv = env.Clone()
 ldscript = 'bootloader/mmix/stage2/ld.conf'
-myenv.Append(LINKFLAGS = '-ffreestanding -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,' + ldscript)
+myenv.Append(LINKFLAGS = ' -ffreestanding -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,' + ldscript)
+myenv.Append(CXXFLAGS = ' -std=c++0x -fno-exceptions -fno-rtti')
 elf = myenv.EscapeCProg(
-	'', 'stage2.elf', ['c0.S', myenv.Glob('*.c'), 'c1.S'], force_static = True,
+	'', 'stage2.elf', ['c0.S', myenv.Glob('*.cc'), 'c1.S'], force_static = True,
 	var_addr = False, LIBS = ['c']
 )
 myenv.Symlink('$BINDIR/stage2.elf', elf)
