--- a/source/kernel/SConscript
+++ b/source/kernel/SConscript
@@ -24,7 +24,7 @@ src += [kenv.Glob('src/*.cc'), kenv.Glob('src/*/*.cc')]
 src += [f for f in kenv.Glob('src/*/*/*.c') if 'arch/' not in str(f)]
 src += [f for f in kenv.Glob('src/*/*/*.cc') if 'arch/' not in str(f)]
 src += [f for f in kenv.Glob('src/arch/$ARCH/*.cc') if 'start.cc' not in str(f)]
-src += [kenv.Glob('src/arch/$ARCH/*/*.cc')]
+src += [kenv.Glob('src/arch/$ARCH/*/*.cc'), kenv.Glob('src/arch/$ARCH/*/*/*.cc')]
 src += [kenv.Glob('src/basic/arch/$ARCH/*.c')]
 src += [kenv.Glob('src/basic/arch/$ARCH/*.S')]
 src += [f for f in kenv.Glob('src/arch/$ARCH/*.S') if 'kernel.S' not in str(f)]
