Improved linker-scripts.

--- a/source/kernel/src/arch/eco32/ld.conf
+++ b/source/kernel/src/arch/eco32/ld.conf
@@ -1,6 +1,13 @@
 OUTPUT_FORMAT("elf32-eco32")
 ENTRY(start)
 
+PHDRS
+{
+	text	PT_LOAD;
+	data	PT_LOAD;
+	bss		PT_LOAD;
+}
+
 SECTIONS
 {
 	. = 0xC0000000;
@@ -8,25 +15,30 @@ SECTIONS
 	.text : AT(ADDR(.text) - 0xC0000000)
 	{
 		*(.text*)
-	}
+	} : text
+	
+	.rodata : AT(ADDR(.rodata) - 0xC0000000)
+	{
+		*(.rodata*)
+	} : text
 
     .init_array : AT (ADDR (.init_array) - 0xC0000000)
     {
         PROVIDE (CTORS_BEGIN = .);
         KEEP (*(.init_array .ctors))
         PROVIDE (CTORS_END = .);
-    }
+    } : data
 	
 	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
 	{
 		*(.data)
-		*(.rodata*)
-	}
+		*(.data.*)
+	} : data
 
 	.bss ALIGN (4096) : AT(ADDR(.bss) - 0xC0000000)
 	{
 		*(COMMON*)
 		*(.bss*)
 		_ebss = .;
-	}
+	} : bss
 }
