--- a/source/kernel/src/arch/i586/ld.conf
+++ b/source/kernel/src/arch/i586/ld.conf
@@ -1,6 +1,14 @@
 OUTPUT_FORMAT("elf32-i386")
 ENTRY(loader)
 
+PHDRS
+{
+	init	PT_LOAD;
+	text	PT_LOAD;
+	data	PT_LOAD;
+	bss		PT_LOAD;
+}
+
 SECTIONS
 {
 	. = 0x100000;
@@ -8,7 +16,7 @@ SECTIONS
 	.init :
 	{
 		*(.init)
-	}
+	} : init
 
 	. += 0xC0000000;
 	
@@ -16,25 +24,30 @@ SECTIONS
 	{
 		_btext = .;
 		*(.text*)
-	}
-
+	} : text
+	
+	.rodata : AT(ADDR(.rodata) - 0xC0000000)
+	{
+		*(.rodata*)
+	} : text
+	
     .init_array : AT (ADDR (.init_array) - 0xC0000000)
     {
         PROVIDE (CTORS_BEGIN = .);
         KEEP (*(.init_array .ctors))
         PROVIDE (CTORS_END = .);
-    }
+    } : data
 	
 	.data ALIGN (4096) : AT(ADDR(.data) - 0xC0000000)
 	{
 		*(.data)
-		*(.rodata*)
-	}
+		*(.data.*)
+	} : data
 
 	.bss ALIGN (4096) : AT(ADDR(.bss) - 0xC0000000)
 	{
 		*(COMMON*)
 		*(.bss*)
 		_ebss = .;
-	}
+	} : bss
 }
