Improved Escape ABI and syscalls in userspace.

--- a/source/lib/SConscript
+++ b/source/lib/SConscript
@@ -2,8 +2,8 @@
 
 Import('env')
 
-if env['ARCH'] == 'eco32':
+if env['ARCH'] == 'eco32' or env['ARCH'] == 'mmix':
 	env.SConscript([f for f in env.Glob('*/SConscript')
-					if 'basic' not in str(f) and 'gui' not in str(f)], 'env')
+					if 'basic' not in str(f) and 'gui' not in str(f) and 'vbe' not in str(f)], 'env')
 else:
 	env.SConscript([f for f in env.Glob('*/SConscript') if 'basic' not in str(f)], 'env')
