--- a/source/SConstruct
+++ b/source/SConstruct
@@ -22,12 +22,12 @@ hostenv = Environment(
 	CXXFLAGS = '-Wall -Wextra -ansi -g'
 )
 env = Environment(
-	CFLAGS = '-Wall -ansi -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings'
+	CFLAGS = '-Wall -std=c99 -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings'
 			+ ' -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Winline'
 			+ ' -Wno-long-long -Wstrict-prototypes -fms-extensions',
 	CXXFLAGS = '-Wall -ansi -std=c++0x -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings'
 			+ ' -Wmissing-declarations -Wno-long-long',
-	ASFLAGS = '-Wa,--warn',
+	ASFLAGS = '-Wa,--warn -DIN_ASM',
 	ENV = {'PATH' : crossdir + "/bin:" + os.environ['PATH']},
 	CPPPATH = ['#include', '#include/cpp'],
 	CXX = cross + '-g++',
@@ -188,7 +188,10 @@ def EscapeLib(env, target, source, LIBS = []):
 	env.Install('$BINDIR', stlib)
 	if env['ARCH'] == 'i586':
 		shenv = myenv.Clone()
-		shenv.Append(LINKFLAGS = ' -Wl,-shared -Wl,-soname,lib' + target + '.so')
+		shenv.Append(
+			CPPFLAGS = ' -DSHAREDLIB=1',
+			LINKFLAGS = ' -Wl,-shared -Wl,-soname,lib' + target + '.so'
+		)
 		shlib = shenv.SharedLibrary(target, source, LIBS = LIBS)
 		SetLibDeps(env, shlib, LIBS)
 		env.Install('$BINDIR', shlib)
