--- a/source/drivers/mmix/keyboard/SConscript
+++ b/source/drivers/mmix/keyboard/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'keyboard', source = env.Glob('*.c'))
+env.EscapeCProg('sbin', target = 'keyboard', source = env.Glob('*.c'), LIBS = ['keyb'])
