--- a/source/drivers/i586/vesatext/SConscript
+++ b/source/drivers/i586/vesatext/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'vesatext', source = env.Glob('*.c'), LIBS = ['vbe'])
+env.EscapeCProg('sbin', target = 'vesatext', source = env.Glob('*.c'), LIBS = ['vbe', 'tui'])
