--- a/source/user/guishell/SConscript
+++ b/source/user/guishell/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'guishell', source = env.Glob('*.cpp'), LIBS = ['gui', 'vterm', 'shell'])
+#env.EscapeCXXProg('bin', target = 'guishell', source = env.Glob('*.cpp'), LIBS = ['gui', 'vterm', 'shell'])
