--- a/source/user/raptor/SConscript
+++ b/source/user/raptor/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('bin', target = 'raptor', source = env.Glob('*.c'))
+#env.EscapeCProg('bin', target = 'raptor', source = env.Glob('*.c'))
