Enabled the wheel-mouse in bochs.

--- a/source/boot/i586/bochs.cfg
+++ b/source/boot/i586/bochs.cfg
@@ -16,6 +16,7 @@ ata3: enabled=0, ioaddr1=0x168, ioaddr2=0x360, irq=9
 
 com1: enabled=1, mode=file, dev="log.txt"
 keyboard: type=mf, keymap=/usr/local/share/bochs/keymaps/x11-pc-de.map
+mouse: type=imps2, enabled=0
 port_e9_hack: enabled=1
 
 vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest"
