--- a/source/user/glogin/SConscript
+++ b/source/user/glogin/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('bin', target = 'glogin', source = env.Glob('*.c'))
+env.EscapeCXXProg('bin', target = 'glogin', source = env.Glob('*.cpp'), LIBS = ['gui','usergroup'])
