Removed floating point stuff from kernel.
We can't use it there that easily because we would have to
save the user-state first and restore it afterwards. So, better
don't use it at all.
To ensure that we don't use it by accident in the future, I added
the -msoft-float option which results in a linker error if we
have floating point arithmetic.
For that reason, we had to move some stuff from basic into the
c library and some tests out of the kernel test into libctest.

--- a/source/kernel/SConscript
+++ b/source/kernel/SConscript
@@ -7,11 +7,18 @@ kenv = env.Clone()
 ldconf = 'src/arch/$ARCH/ld.conf'
 gensyms = Builder(action = './tools/gensymbols.sh $SOURCE > $TARGET')
 kenv.Append(
+	CFLAGS = ' -ffreestanding',
 	CXXFLAGS = ' -std=c++0x -fno-exceptions -fno-rtti -ffreestanding',
 	CPPFLAGS = ' -DIN_KERNEL=1',
 	LINKFLAGS = ' -ffreestanding -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,kernel/' + ldconf,
 	BUILDERS = {'GenSyms' : gensyms}
 )
+
+if kenv['ARCH'] == 'i586':
+	kenv.Append(
+		CFLAGS = ' -msoft-float',
+		CXXFLAGS = ' -msoft-float'
+	)
 
 #kenv.Append(
 #	CPPFLAGS = ' -D PROFILE=1 -finstrument-functions -finstrument-functions-exclude-file-list='	+
