--- a/source/drivers/i586/ata/SConscript
+++ b/source/drivers/i586/ata/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'ata', source = env.Glob('*.c'), force_static = True)
+env.EscapeCXXProg('sbin', target = 'ata', source = env.Glob('*.cc'), force_static = True)
