--- a/source/drivers/common/romdisk/SConscript
+++ b/source/drivers/common/romdisk/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'romdisk', source = env.Glob('*.c'), force_static = True)
+env.EscapeCXXProg('sbin', target = 'romdisk', source = env.Glob('*.cc'), force_static = True)
