--- a/source/drivers/common/null/SConscript
+++ b/source/drivers/common/null/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'null', source = env.Glob('*.c'))
+env.EscapeCXXProg('sbin', target = 'null', source = env.Glob('*.cc'))
