--- a/source/drivers/i586/keyb/SConscript
+++ b/source/drivers/i586/keyb/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'keyb', source = env.Glob('*.c'), LIBS = ['keyb'])
+env.EscapeCXXProg('sbin', target = 'keyb', source = env.Glob('*.cc'))
