--- a/source/drivers/i586/rtc/SConscript
+++ b/source/drivers/i586/rtc/SConscript
@@ -1,4 +1,6 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'rtc', source = env.Glob('*.c'), force_static = True)
+env.EscapeCXXProg(
+	'sbin', target = 'rtc', source = env.Glob('*.cc'), force_static = True, LIBS = ['ipc']
+)
