--- a/source/drivers/i586/speaker/SConscript
+++ b/source/drivers/i586/speaker/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'speaker', source = env.Glob('*.c'))
+env.EscapeCXXProg('sbin', target = 'speaker', source = env.Glob('*.cc'), LIBS = ['ipc'])
