--- a/source/user/power/SConscript
+++ b/source/user/power/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('bin', target = 'power', source = env.Glob('*.c'))
+env.EscapeCXXProg('bin', target = 'power', source = env.Glob('*.cc'), LIBS = ['ipc'])
