Fixes for eco32.
In theory, it should work again on eco32, but exceptions seem
to be broken there. But the drivers have been converted to the
new IPC API and I've added alignment to IPCBuf.

--- a/source/drivers/eco32/disk/SConscript
+++ b/source/drivers/eco32/disk/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'disk', source = env.Glob('*.c'))
+env.EscapeCXXProg('sbin', target = 'disk', source = env.Glob('*.cc'), LIBS = ['ipc'])
