--- a/source/drivers/mmix/rtc/SConscript
+++ b/source/drivers/mmix/rtc/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCProg('sbin', target = 'rtc', source = env.Glob('*.c'))
+env.EscapeCXXProg('sbin', target = 'rtc', source = env.Glob('*.cc'), LIBS = ['ipc'])
