--- a/source/drivers/common/tcpip/SConscript
+++ b/source/drivers/common/tcpip/SConscript
@@ -1,4 +1,6 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('sbin', target = 'tcpip', source = env.Glob('*.cc'), LIBS = ['ipc'])
+env.EscapeCXXProg(
+	'sbin', target = 'tcpip', source = [env.Glob('*.cc'), env.Glob('*/*.cc')], LIBS = ['ipc']
+)
