Added a DNS utility into the C++ library.
To do so, I also moved the ipc stuff into the C++ library.
Because most of the C++ applications need something from
it and otherwise we can't use ipc stuff in the C++ library
to build abstractions like DNS in this case.

--- a/source/drivers/i586/ata/SConscript
+++ b/source/drivers/i586/ata/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'sbin', target = 'ata', source = env.Glob('*.cc'), force_static = True, LIBS = ['ipc']
+	'sbin', target = 'ata', source = env.Glob('*.cc'), force_static = True
 )
