--- a/source/user/fileman/SConscript
+++ b/source/user/fileman/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'bin', target = 'fileman', source = [env.Glob('*.cpp'),env.Glob('*/*.cpp')], LIBS = ['gui', 'ipc']
+	'bin', target = 'fileman', source = [env.Glob('*.cpp'),env.Glob('*/*.cpp')], LIBS = ['gui']
 )
