--- a/source/user/guishell/SConscript
+++ b/source/user/guishell/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'bin', target = 'guishell', source = env.Glob('*.cpp'), LIBS = ['gui', 'vterm', 'shell', 'ipc']
+	'bin', target = 'guishell', source = env.Glob('*.cpp'), LIBS = ['gui', 'vterm', 'shell']
 )
