--- a/source/drivers/common/ext2/SConscript
+++ b/source/drivers/common/ext2/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'sbin', target = 'ext2', source = env.Glob('*.cc'), force_static = True, LIBS = ['fs', 'ipc']
+	'sbin', target = 'ext2', source = env.Glob('*.cc'), force_static = True, LIBS = ['fs']
 )
