--- a/source/drivers/common/romdisk/SConscript
+++ b/source/drivers/common/romdisk/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'sbin', target = 'romdisk', source = env.Glob('*.cc'), force_static = True, LIBS = ['ipc']
+	'sbin', target = 'romdisk', source = env.Glob('*.cc'), force_static = True
 )
