--- a/source/drivers/common/tcpip/SConscript
+++ b/source/drivers/common/tcpip/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'sbin', target = 'tcpip', source = [env.Glob('*.cc'), env.Glob('*/*.cc')], LIBS = ['ipc']
+	'sbin', target = 'tcpip', source = [env.Glob('*.cc'), env.Glob('*/*.cc')], LIBS = ['usergroup']
 )
