--- a/source/drivers/common/uimng/SConscript
+++ b/source/drivers/common/uimng/SConscript
@@ -3,6 +3,6 @@
 Import('env')
 
 if env['ARCH'] == 'i586':
-	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'), LIBS = ['ipc','vbetext'])
+	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'), LIBS = ['vbetext'])
 else:
-	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'), LIBS = ['ipc'])
+	env.EscapeCXXProg('sbin', target = 'uimng', source = env.Glob('*.cc'))
