--- a/source/drivers/common/vterm/SConscript
+++ b/source/drivers/common/vterm/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'sbin', target = 'vterm', source = env.Glob('*.cc'), LIBS = ['vterm', 'usergroup', 'ipc']
+	'sbin', target = 'vterm', source = env.Glob('*.cc'), LIBS = ['vterm', 'usergroup']
 )
