--- a/source/drivers/eco32/disk/SConscript
+++ b/source/drivers/eco32/disk/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('sbin', target = 'disk', source = env.Glob('*.cc'), LIBS = ['ipc'])
+env.EscapeCXXProg('sbin', target = 'disk', source = env.Glob('*.cc'))
