--- a/source/drivers/i586/vesa/SConscript
+++ b/source/drivers/i586/vesa/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('sbin', target = 'vesa', source = env.Glob('*.cc'), LIBS = ['vbe', 'vbetext', 'ipc'])
+env.EscapeCXXProg('sbin', target = 'vesa', source = env.Glob('*.cc'), LIBS = ['vbe', 'vbetext'])
