--- a/source/user/login/SConscript
+++ b/source/user/login/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'login', source = env.Glob('*.cc'), LIBS = ['ipc', 'usergroup'])
+env.EscapeCXXProg('bin', target = 'login', source = env.Glob('*.cc'), LIBS = ['usergroup'])
