--- a/source/user/progress/SConscript
+++ b/source/user/progress/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'progress', source = env.Glob('*.cc'), LIBS = ['ipc'])
+env.EscapeCXXProg('bin', target = 'progress', source = env.Glob('*.cc'))
