--- a/source/user/top/SConscript
+++ b/source/user/top/SConscript
@@ -2,5 +2,5 @@
 
 Import('env')
 env.EscapeCXXProg(
-	'bin', target = 'top', source = env.Glob('*.cpp'), LIBS = ['info', 'usergroup', 'ipc']
+	'bin', target = 'top', source = env.Glob('*.cpp'), LIBS = ['info', 'usergroup']
 )
