--- a/source/user/vtctrl/SConscript
+++ b/source/user/vtctrl/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'vtctrl', source = env.Glob('*.cc'), LIBS = ['ipc'])
+env.EscapeCXXProg('bin', target = 'vtctrl', source = env.Glob('*.cc'))
